--- a/style.css
+++ b/style.css
@@ -580,36 +580,27 @@ ul:not(.admin-block ul) li::before {
   user-select: none;
 }
 
-/* --- Только для мобильной версии --- */
 @media (max-width: 900px) {
-
-  /* Новости: изображения не вылезают за края */
-  .news-images-wrapper img {
-    max-width: 100vw;
-    width: 100%;
-    height: auto;
-    max-height: 40vw;
-    object-fit: contain;
+  .main-content-bgimg {
+    /* Чтобы фон занимал всю ширину, а не создавал горизонтальный скролл */
+    border-radius: 12px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .main-content-overlay {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    word-break: break-word;
     box-sizing: border-box;
   }
 }
-
 @media (max-width: 650px) {
-  .news-images-wrapper img {
+  .main-content-overlay {
     max-width: 98vw;
-    max-height: 55vw;
-  }
-}
-
-@media (max-width: 900px) {
-  .main-content-overlay {
-    padding-left: 5vw;
-    padding-right: 5vw;
-  }
-}
-@media (max-width: 650px) {
-  .main-content-overlay {
-    padding-left: 4vw;
-    padding-right: 4vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
   }
 }
